--- a/InternasAnidadasCalculadora/settings.gradle
+++ b/InternasAnidadasCalculadora/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "InternasAnidadas(Calculadora)"
+rootProject.name = "InternasyAnidadas(Calculadora)"
 include ':app'
