--- a/TabToolbarApp/app/build.gradle
+++ b/TabToolbarApp/app/build.gradle
@@ -4,10 +4,11 @@ plugins {
 }
 
 android {
+    namespace 'com.example.tabtoolbarapp1'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.tabtoolbarapp"
+        applicationId "com.example.tabtoolbarapp1"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -32,10 +33,11 @@ android {
 }
 
 dependencies {
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
