Agregando cambios de proyecto Semana 17

--- a/AndroidMySQL/settings.gradle
+++ b/AndroidMySQL/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "AndroidMySQL"
+rootProject.name = "android_mysql1"
 include ':app'
