--- a/AndroidMySQL/app/build.gradle
+++ b/AndroidMySQL/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.androidmysql'
+    namespace 'com.example.android_mysql1'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.androidmysql"
+        applicationId "com.example.android_mysql1"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -38,8 +38,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.android.volley:volley:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    implementation 'com.android.volley:volley:1.2.1'
 }
