Agregando práctica Semana 18

--- a/AndroidFirebase/settings.gradle
+++ b/AndroidFirebase/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "AndroidFirebase"
+rootProject.name = "AndroidFirebase1"
 include ':app'
