--- a/AndroidFirebase/app/src/main/AndroidManifest.xml
+++ b/AndroidFirebase/app/src/main/AndroidManifest.xml
@@ -10,8 +10,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidFirebase"
+        android:theme="@style/Theme.AndroidFirebase1"
         tools:targetApi="31">
+        <activity
+            android:name=".PrincipalActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity android:name=".SplashActivity"
+            android:exported="true"
+            android:theme="@style/SplashTema">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+           </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
